[metadata]
name = temelio_monitoring
author = Temelio
author-email = alexandre.chaussier@temelio.com
summary = Temelio monitoring lib written in Python, used with Shinken
description-file =
    README.rst
home-page = https://github.com/Temelio/monitoring-lib-python
requires-python = >=3.4
classifier =
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: ISC License (ISCL)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
   setup.py
   temelio_monitoring/tests/

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[bumpversion]
current_version = 0.6.0
commit = False
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:temelio_monitoring/__init__.py]

[wheel]
universal = 1
